2010-07-13  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el (w3m-link-numbering-mode): Using `buffer-list' instead of
	`w3m-list-buffers' as the latter does unnecessary stuff.
	(w3m-linknum-read-url): Removed. It's now equivalent to:
	(car (w3m-linknum-get-action prompt 1))
	(w3m-linknum-toggle-inline-image): If no url under selected image,
	move over it and toggle it.
	(w3m-linknum-external-view-this-url, w3m-linknum-edit-this-url):
	Using `w3m-linknum-get-action' instead of `w3m-linknum-read-url'.

	* w3m.el (autoload): Added `w3m-link-numbering-mode', removed
	`w3m-linknum-read-url'.

2010-07-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el (w3m-linknum-minibuffer-prompt): Make face config valid
	for XEmacs as well.
	(w3m-linknum-match): New face.
	(w3m-read-int-interactive): Make it work for XEmacs as well.
	(w3m-highlight-numbered-anchor): Use w3m-linknum-match face.

2010-07-12  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el: Updated commentary and usage sections.
	(w3m-substitute-key-definitions): New macro.
	(w3m-link-numbering-mode-map): Changed keybindings.
	(w3m-link-numbering-mode): Added mode-line indicator. Don't
	activate numbering overlays. Changing status mode causes all other
	w3m buffers to change status as well.
	(w3m-move-numbered-anchor): Removed.
	(w3m-with-linknum): Numbering overlays should never be active
	before invoking linknum functions thus less bookkeeping.
	(w3m-go-to-linknum, w3m-linknum-follow): Add mark for previous
	position.

2010-07-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-lnum.el (w3m-read-int-interactive): Add keys to exit event loop,
	C-m & C-j.

2010-07-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-ctl-c-map, w3m-redisplay-map)
	(w3m-linknum-map): New sub-keymaps.
	(w3m-lynx-like-map, w3m-info-like-map): Move `C-c' prefixed commands
	and `C' prefixed commands to w3m-ctl-c-map and w3m-redisplay-map
	respectively.

2010-07-09  Andrey Kotlarski  <m00naticus@gmail.com>
